--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -162,7 +162,6 @@ header .header-styles .left .sections ul li {
     width: 100%;
 }
 header .header-styles .left .sections ul li .section-link {
-    /* padding: 1rem 0; */
     font-weight: 600;
     text-align: center;
     border-radius: 5px;
@@ -316,7 +315,7 @@ header .header-styles .left .sections .menu-close-btn {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    z-index: 1;
+    z-index: 55;
 }
 
 .banner .banner-nav .nav-arrow {
@@ -925,6 +924,7 @@ header .header-styles .left .sections .menu-close-btn {
     width: 100%;
     height: 100%;
     object-fit: fill;
+    aspect-ratio: 1;
     border-radius: 12px;
     transition: all 0.3s ease;
 }
@@ -997,21 +997,27 @@ header .header-styles .left .sections .menu-close-btn {
     margin: 4rem 0;
 }
 #brand-deals .brand-deals-container {
-    text-align: center;
     background: #3C4242;
     padding: 2rem 3rem;
     border-radius: .5rem;
 }
 #brand-deals .brand-deals-container .top {
+    text-align: center;
     color: #fff;
     margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 #brand-deals .brand-deals-container .top h1 {
+    width: 100%;
     font-size: 2.5rem;
     font-weight: 800;
-    margin-bottom: 1rem;
+    margin-bottom: .2rem;
 }
 #brand-deals .brand-deals-container .top p {
+    display: block;
     font-size: 1.2rem;
     font-weight: 500;
     margin-bottom: 2rem;
@@ -1039,9 +1045,13 @@ header .header-styles .left .sections .menu-close-btn {
     align-items: center;
     box-shadow: 0 0 1px #fff;
     transition: all 0.3s ease;
-}
-#brand-deals .brand-deals-container .bottom .brand {
     width: 100%;
+}
+#brand-deals .brand-deals-container .bottom .brand img {
+    width: 70%;
+    height: undefined;
+    aspect-ratio: 2/1;
+    border-radius: .5rem;
 }
 #brand-deals .brand-deals-container .bottom .brand:hover {
     transform: translateY(-10px);
@@ -1478,7 +1488,6 @@ footer {
         padding: 30px 0 0 0;
     }
 }
-
 /* footer end */
 
 /* Responsive styles */
@@ -2064,6 +2073,13 @@ footer {
     #mens .mens-container h2, #womens .womens-container h2, #limelight .limelight-container h2 {
         font-size: 1.1rem;
         margin-bottom: 2.1rem;
+    }
+    .app-store {
+        flex-wrap: wrap;
+    }
+    .social a {
+        width: 30px;
+        height: 30px;
     }
 }
 
